--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -6,8 +6,11 @@
     <h1>Tous les messages du sujet : </h1>
     {% for message in sujet.messageSujets %}
     <li>  autheur {{ message.user.firstName }} </li>
-        message {{ message.message }} <a href="{{ path('comment_sujet_edit', {id: message.id}) }}">modifier</a>
+        message {{ message.message }} 
+        {% if app.user.id == message.user.id %}
+        <a href="{{ path('comment_sujet_edit', {id: message.id}) }}">modifier</a>
         {{ include('comment_sujet/_delete_form.html.twig') }}
+        {% endif %}
         <br>
         <hr>
 
