--- a/templates/sujet/_form.html.twig
+++ b/templates/sujet/_form.html.twig
@@ -1,4 +1,6 @@
+<div class="uk-width-1-3 uk-align-center">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="uk-button uk-button-default uk-align-center">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+</div>
