--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -17,5 +17,8 @@
             </li>
         {% endfor %}
         </ul>
+
+
+    {{ include('file/index.html.twig') }}
         <a href="{{ path('projet_index') }}">back to list</a>
 {% endblock %}
