--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,6 +14,7 @@
         {{ form_row(registrationForm.lastname) }}
         {{ form_row(registrationForm.description) }}
         {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.technos) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
         }) }}
