--- a/templates/file/index.html.twig
+++ b/templates/file/index.html.twig
@@ -38,7 +38,7 @@
                                     {{ file.type }}
                                 </div>
                                 <div class="text-sm font-normal tracking-wide ml-4">
-                                    <a href="{{ path('file_delete', {id: file.id}) }}">Delete</a>
+                                    <a href="{{ path('file_delete', {id: file.id, projet:projet.id} ) }}">Delete</a>
                                 </div>
                             </div>
                         {% else %}
