--- a/templates/projet/index.html.twig
+++ b/templates/projet/index.html.twig
@@ -5,11 +5,37 @@
 {% block body %}
     <ul>
         {% for projet in projets %}
-        <li>
-            {{ projet.name }}
-            <a href="{{ path('projet_show', {'id': projet.id}) }}">show</a>
-            <a href="{{ path('projet_edit', {'id': projet.id}) }}">Edit</a>
-        </li>
+        <div class="uk-card uk-card-default uk-width-1-2@m">
+            <div class="uk-card-header">
+                <div class="uk-grid-small uk-flex-middle" uk-grid>
+                    <div class="uk-width-expand">
+                        <h3 class="uk-card-title uk-margin-remove-bottom">{{ projet.name }}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="uk-card-body">
+                <p>{{ projet.description }}</p>
+            </div>
+            <div class="uk-card-footer">
+            {% if app.user.id == projet.user.id %}
+                <a href="{{ path('chanel_add', {'projet': projet.id}) }}">add channel</a>
+                <a href="{{ path('projet_edit', {'id': projet.id}) }}">Edit</a>
+            {% endif %}
+                 {% for chanel in projet.chanel %}
+                    <li>
+                    {% if chanel.isValidate == 1 %}
+                        {{ chanel.techno.name }} <p>Freelance trouvé!</p>
+                    {% else %}
+                        {{ chanel.techno.name }}
+                            {% if app.user.roles.0 == "ROLE_FREELANCE" %}
+                                <a href="{{ path('chanel_add_user', {'id': chanel.id}) }}">NIK</a>
+                            {% endif %}
+                    </li>
+                     {% endif %}
+                {% endfor %}
+                <a href="{{ path('projet_show', {'id': projet.id}) }}">show</a>
+            </div>
+        </div>
         {% endfor %}
     </ul>
     <a href="{{ path('projet_new') }}">New projet</a>
