--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,12 @@
         {% block javascripts %}
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.22/dist/js/uikit.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.22/dist/js/uikit-icons.min.js"></script>
+            <script>
+                module.exports = {
+                    plugins: [require('@tailwindcss/forms'),]
+                };
+            </script>
+
             {#{{ encore_entry_script_tags('app') }}#}
         {% endblock %}
     </body>
