front index sujet

--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -3,7 +3,10 @@
 {% block title %} Forum {% endblock %}
 
 {% block body %}
-    <h1 class="uk-text-center ">Envie de discuter avec les freelancer de la communauté Fiverr?</h1>
+    <div class="px-6 py-4 bg-white shadow">
+        <h1 class="uk-text-center ">Envie de discuter avec les freelancer de la communauté Fiverr?</h1>
+    </div>
+
     <div class="overflow-x-hidden bg-gray-100">
         <div class="px-6 py-8 ">
             <div class="container flex justify-between mx-auto">
