--- a/templates/comment_sujet/_form.html.twig
+++ b/templates/comment_sujet/_form.html.twig
@@ -1,6 +1,6 @@
 <div class="uk-flex uk-flex-center uk-width-1-3">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="uk-button uk-button-text">{{ button_label|default('Save') }}</button>
+    <button class="bg-white text-gray-700 font-medium py-1 px-4 border border-gray-400 rounded-lg tracking-wide mr-1 hover:bg-gray-100">{{ button_label|default('Post comment') }}</button>
 {{ form_end(form) }}
 </div>
