--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 
     </head>
     <body>
-
+ {{ include('nav.html.twig') }}
         {% block body %}{% endblock %}
         {% block javascripts %}
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.6.22/dist/js/uikit.min.js"></script>
