--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,4 +1,4 @@
 {% extends "base.html.twig" %}
 {% block body %}
-{% include("sujet/_form.html.twig") %}
+ {% include("user/_form.html.twig") %}
 {% endblock %}
