front commentaires sujet

--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -3,11 +3,11 @@
 {% block title %} Forum {% endblock %}
 
 {% block body %}
-    <div class="px-6 py-4 bg-white shadow">
+    <div class="px-6 py-4 bg-green-50 shadow">
         <h1 class="uk-text-center ">Envie de discuter avec les freelancer de la communauté Fiverr?</h1>
     </div>
 
-    <div class="overflow-x-hidden bg-gray-100">
+    <div class="overflow-x-hidden bg-green-50">
         <div class="px-6 py-8 ">
             <div class="container flex justify-between mx-auto">
                 <div class="w-full lg:w-8/12">
