--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -44,7 +44,7 @@
                     <div class="mt-6">
                         <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
                             <div class="flex items-center justify-between"><span class="font-light text-gray-600">
-                                    {{ message.date|date('d-m-Y') }}
+                                    {{ message.date|date('d-m-Y H:m') }}
                                 </span>
                             </div>
                             <div class="mt-2"><p class="text-2xl font-bold text-gray-700 hover:underline">{{ message.user.firstname }}</p>
@@ -70,7 +70,7 @@
                     <div class="mt-6">
                         <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
                             <div class="flex items-center justify-between"><span class="font-light text-gray-600">
-                                    {{ message.date|date('d-m-Y') }}
+                                    {{ message.date|date('d-m-Y H:m') }}
                                 </span>
                             </div>
                             <div class="mt-2"><p class="text-2xl font-bold text-gray-700 hover:underline">{{ message.user.firstname }}</p>
