--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -29,9 +29,9 @@
                             <div class="flex items-center justify-between"><span class="font-light text-gray-600">
                                     {{ sujet.date|date('d-m-Y') }}
                                 </span>
-                                <a href="#" class="px-2 py-1 font-bold text-gray-100 bg-green-400 rounded hover:bg-gray-500">
+                                <span class="px-2 py-1 font-bold text-gray-100 rounded" style="background-color: {{ sujet.topic.color }} ">
                                     {{ sujet.topic.name }}
-                                </a>
+                                </span>
                             </div>
                             <div class="mt-2"><a href="{{path('sujet_show', {id: sujet.id} ) }}" class="text-2xl font-bold text-gray-700 hover:underline">{{ sujet.name }}</a>
                                 <p class="mt-2 text-gray-600">
