--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
 {% block body %}
  {% include("user/_form.html.twig") %}
+ <a class="uk-flex uk-flex-center uk-align-center" href="{{ path("user_show", {id: app.user.id}) }}">Back to profil</a>
 {% endblock %}
