--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -4,11 +4,11 @@
 
 {% block body %}
     {{dump(user)}}
-    <h1> Hello {{ app.user.firstname }} </h1>
-    <h4>Name :{{ app.user.firstname }}</h4><br>
-    <h4>LastName :{{ app.user.lastname }}</h4><br>
-    <h4>Email :{{ app.user.email }}</h4><br>
-    <h4>Avatar : </h4>
+    <h1 class="uk-flex uk-flex-center uk-align-center"> Hello {{ app.user.firstname }} </h1>
+    <h4 class="uk-flex uk-flex-center uk-align-center">Name :{{ app.user.firstname }}</h4><br>
+    <h4 class="uk-flex uk-flex-center uk-align-center">LastName :{{ app.user.lastname }}</h4><br>
+    <h4 class="uk-flex uk-flex-center uk-align-center">Email :{{ app.user.email }}</h4><br>
+    <h4 class="uk-flex uk-flex-center uk-align-center">Avatar : </h4>
         {% if app.user.avatar is null %}
             You don't have avatar  
         {% else %}
@@ -16,7 +16,7 @@
                 {{ app.user.avatar.url }}
             {% endfor %}
         {% endif %}
-    <a href="{{ path('change_avatar')}}">Change avatar</a>
+    <a class="uk-flex uk-flex-center uk-align-center"href="{{ path('change_avatar')}}">Change avatar</a>
     <br>
-    <a href='{{path('user_edit', {id: user.id}) }}'> Edit </a>
+    <a class="uk-flex uk-flex-center uk-align-center"href='{{path('user_edit', {id: user.id}) }}'> Edit </a>
 {% endblock %}
