--- a/templates/comment_sujet/new.html.twig
+++ b/templates/comment_sujet/new.html.twig
@@ -1,4 +1,6 @@
 {% extends "base.html.twig" %}
 {% block body %}
-{% include("sujet/_form.html.twig") %}
+    <div class="uk-form">
+        {% include("sujet/_form.html.twig") %}
+    </div>
 {% endblock %}
