--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,2 +1,8 @@
 @import url('./general.scss');
 @import url('./class.scss');
+
+.img_test{
+    width: 20%;
+    height: 20%;
+    background: linear-gradient(235deg,#89ff00,#010615,#00bcd4);
+}
