--- a/templates/sujet/_form.html.twig
+++ b/templates/sujet/_form.html.twig
@@ -1,7 +1,4 @@
-
 {{ form_start(form) }}
-
-
 <!-- component -->
     <div class="max-w-md w-full space-y-8 p-10 bg-white rounded-xl shadow-lg z-10 m-auto mt-10 mb-5">
         <div class="grid  gap-8 grid-cols-1">
@@ -20,5 +17,5 @@
                 </div>
             </div>
         </div>
-
+    </div>
 {{ form_end(form) }}
