--- a/templates/topic/_form.html.twig
+++ b/templates/topic/_form.html.twig
@@ -1,4 +1,3 @@
-
 {{ form_start(form) }}
 
 <!-- component -->
@@ -19,5 +18,6 @@
             </div>
         </div>
     </div>
+</div>
 
-    {{ form_end(form) }}
+{{ form_end(form) }}
