change new form path for comment sujet new

--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -18,7 +18,7 @@
                         </div>
                         <div class="mt-2"><a href="{{path('sujet_show', {id: sujet.id} ) }}" class="text-2xl font-bold text-gray-700 hover:underline">{{ sujet.name }}</a>
                             <p class="mt-2 text-gray-600">
-                                {{ sujet.shortDescription }}
+                                {{ sujet.longDescription }}
                             </p>
                             <p class="font-bold text-gray-700 hover:underline text-right">{{ sujet.user.firstname }} {{ sujet.user.lastname }}</p>
                         </div>
