--- a/templates/comment_sujet/new.html.twig
+++ b/templates/comment_sujet/new.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 {% block body %}
-    <div class="uk-form">
-        {% include("sujet/_form.html.twig") %}
+    <div class="uk-form uk-align-center">
+        {% include("comment_sujet/_form.html.twig") %}
     </div>
 {% endblock %}
