--- a/templates/avatar/index.html.twig
+++ b/templates/avatar/index.html.twig
@@ -9,7 +9,7 @@
 
     {{ form_widget(form) }}
 
-    <input type='submit' value='Add avatar'>
+    <input class="uk-form-success" type='submit' value='Add avatar'>
 
     {{ form_end(form) }}
 </div>
