--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -3,6 +3,7 @@
 {% block title %}{{ user.firstName }}{% endblock %}
 
 {% block body %}
+<div class="uk-background-default ">
     <h1 class="uk-flex uk-flex-center uk-align-center"> Hello {{ app.user.firstname }} </h1>
     <h4 class="uk-flex uk-flex-center uk-align-center">Name : {{ app.user.firstname }}</h4><br>
     <h4 class="uk-flex uk-flex-center uk-align-center">LastName : {{ app.user.lastname }}</h4><br>
@@ -14,7 +15,8 @@
                 <img class="uk-flex uk-flex-center uk-align-center img_test" src="{{ app.user.avatar.url }}" alt="avatar"/>
         {% endif %}
 
-    <a class="uk-flex uk-flex-center uk-align-center"href="{{ path('change_avatar')}}">Change avatar</a>
+    <a class="uk-flex uk-flex-center uk-align-center uk-link-text"href="{{ path('change_avatar')}}">Change avatar</a>
     <br>
-    <a class="uk-flex uk-flex-center uk-align-center"href='{{path('user_edit', {id: user.id}) }}'> Edit </a>
+    <a class="uk-flex uk-flex-center uk-align-center uk-link-text"href='{{path('user_edit', {id: user.id}) }}'> Edit </a>
+</div>
 {% endblock %}
