--- a/templates/comment_sujet/_form.html.twig
+++ b/templates/comment_sujet/_form.html.twig
@@ -1,4 +1,4 @@
-<div class="uk-flex uk-flex-center uk-width-1-3">
+<div class="text-center">
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500">{{ button_label|default('Post comment') }}</button>
