--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -49,7 +49,7 @@
                             {% if app.user.id == message.user.id %}
                                 <div class="flex items-center justify-between mt-4">
                                     <a href="{{ path('comment_sujet_edit', {id: message.id}) }}" class="uk-button uk-button-text">modifier</a>
-                                    {{ include('comment_sujet/_delete_form.html.twig') }}
+                                    <a href="{{ path('comment_sujet_delete', {id: message.id}) }}" class="uk-button uk-button-text">supprimer</a>
                                 </div>
                             {% endif %}
                         </div>
@@ -85,11 +85,6 @@
         {% endif %}
     {% endfor %}
 
-
-    {{ include('comment_sujet/new.html.twig') }}
-
-    <a href="{{ path('sujet_index') }}">
-        Retour aux sujets
-    </a>
+    {{ include('comment_sujet/_form.html.twig') }}
 
 {% endblock %}
