--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -16,3 +16,15 @@
     color: black;
     font-size: large;
 }
+
+.uk-text-lead{
+    color: rgba(114, 102, 102, 0.897);
+}
+
+.uk-button{
+    border-radius: 25%;
+}
+
+.border-form{
+    border-radius: 50%;
+}
