--- a/templates/avatar/index.html.twig
+++ b/templates/avatar/index.html.twig
@@ -4,13 +4,20 @@
 
 {% block body %}
 
-<div class="uk-width-1-3 uk-align-center">
-    {{ form_start(form) }}
+<div class="uk-width-1-4 uk-align-center ">
+    <div class="uk-background-muted uk-height-medium">
+        <div class="uk-flex uk-flex-center uk-align-center border-form">
+            {{ form_start(form) }}
+        </div>
+        <div class="uk-flex uk-flex-center uk-align-center border-form">
+        {{ form_widget(form) }}
+        </div>
+        <div class="uk-flex uk-flex-center uk-align-center border-form">
 
-    {{ form_widget(form) }}
+        <input class="uk-form-success uk-flex uk-flex-center uk-align-center uk-button uk-button-primary uk-button-large" type='submit' value='Add avatar'>
 
-    <input class="uk-form-success" type='submit' value='Add avatar'>
-
-    {{ form_end(form) }}
+        {{ form_end(form) }}
+        </div>
+    </div>  
 </div>
 {% endblock %}
