--- a/templates/message_chanel/index.html.twig
+++ b/templates/message_chanel/index.html.twig
@@ -3,9 +3,72 @@
 {% block title %}Hello MessageChanelController!{% endblock %}
 
 {% block body %}
-{% for message in messages %}
-<h3>{{ message.user.lastname }}</h3>
-<p>{{ message.content }}</p>
-{% endfor %}
-{{ include('message_chanel/_form.html.twig') }}
+<!-- component -->
+<!-- This is an example component -->
+<div class="h-screen shadow-lg rounded-lg">
+        <!-- headaer -->
+    <div class="px-5 py-5 flex justify-between items-center bg-white border-b-2">
+            <div class="font-semibold text-2xl">{{ chanel.projet.name }}</div>           
+            <div class="font-semibold h-full pr-5 border-r-2 no-underline uppercase">
+            <a class="text-gray-500" href="#">General</a>
+            </div>
+            {% for chanel in chanel.projet.chanel %}
+            <div class="font-semibold h-full pr-5 border-r-2 no-underline uppercase">
+            <a class="text-gray-500" href="{{ path('message_chanel', {'id': chanel.id}) }}">{{ chanel.techno.name }}</a>
+            </div>
+            {% endfor %}
+    </div>
+    <!-- end header -->
+    <!-- Chatting -->
+    <div class="h-5/6 flex flex-row justify-between bg-white">
+      <!-- chat list -->
+      <div class="flex flex-col w-1/6 border-r-2 overflow-y-auto">
+        <!-- user list -->
+        <div
+          class="flex flex-row py-4 px-2 justify-center items-center border-b-2"
+        >
+          <div class="w-1/4">
+            <img
+              src="https://source.unsplash.com/_7LbC5J-jw4/600x600"
+              class="object-cover h-12 w-12 rounded-full"
+              alt=""
+            />
+          </div>
+          <div class="w-full">
+            <div class="text-lg font-semibold">Discussion</div>
+          </div>
+        </div>
+        <div class="flex flex-row py-4 px-2 items-center border-b-2">
+          <div class="w-1/4">
+            <img
+              src="https://source.unsplash.com/otT2199XwI8/600x600"
+              class="object-cover h-12 w-12 rounded-full"
+              alt=""
+            />
+          </div>
+          <div class="w-full">
+            <div class="text-lg font-semibold no-underline">
+            <a href="{{ path('message_chanel', {'id': chanel.id}) }}" class="text-gray-500">Drive</a></div>
+          </div>
+        </div>
+        <!-- end user list -->
+      </div>
+      <!-- end chat list -->
+      <!-- message -->
+      <div class="w-full px-5 flex flex-col justify-between">
+        <div class="h-full flex flex-col mt-5">
+
+        </div>
+        <div class="py-5">
+          <input
+            class="w-full bg-gray-300 py-5 px-3 rounded-xl"
+            type="text"
+            placeholder="type your message here..."
+          />
+        </div>
+      </div>
+      <!-- end message -->
+      </div>
+    </div>
+</div>
 {% endblock %}
