--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
 
     </head>
     <body>
- {{ include('nav.html.twig') }}
+        {# {{ include('nav.html.twig') }} #}
         {% block body %}{% endblock %}
             
 
