--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,10 +1,7 @@
-<div class="uk-transition-toggle uk-flex uk-flex-center" tabindex="0">
-    <div class="uk-transition-scale-up uk-transition-opaque">
-    <a href="{{path("home_index")}}">
-    <img
-     src="/assets/images/fiverrphpjs.png"
-     alt="fiverr logo"
-     width="500px">
-     </a>
+<nav class="big">
+    <div class="logo">
+        <a href="{{path("home_index")}}">
+            <img src="/assets/images/fiverrphpjs.png" alt="fiverr logo"/>
+        </a>
     </div>
-</div>
+</nav>
