--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %} Forum {% endblock %}
 
 {% block body %}
+    {{ include('nav.html.twig') }}
     <div class="px-6 py-4 bg-green-50 shadow">
         <h1 class="uk-text-center ">Envie de discuter avec les freelancer de la communauté Fiverr?</h1>
     </div>
