--- a/templates/sujet/new.html.twig
+++ b/templates/sujet/new.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
 {% block body %}
+{{ include('nav.html.twig') }}
 {% include("sujet/_form.html.twig") %}
 {% endblock %}
