--- a/assets/styles/class.scss
+++ b/assets/styles/class.scss
@@ -1,26 +1,89 @@
 .nav-link {
     padding: 5px;
-    background-color: #35bf73;
-    border-radius: 10px;
+    border: 2px solid #35bf73;
+    border-radius: 5px;
     width: 150px;
+    overflow: hidden;
+}
+
+.nav-link::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: #35bf73;
+    z-index: -1;
+    transition: all .2s ease-in;
+}
+
+.nav-link:hover::before {
+    transform: translateX(-105%);
 }
 
 .nav-link a {
     color: #fff;
     display: block;
     text-align: center;
+    font-size: 1.3rem;
 }
 
-.logo {
-    width: 35%;
-    a {
-        display: block;
-        img {
-            display: block;
-            width: 90%;
-            &:hover {
-                transform: scale(2);
-            }
-        }
+.draw {
+    height: 30vh;
+    margin: 0 auto;
+}
+
+.draw path {
+    fill: none;
+    stroke-width: 10;
+    stroke-dasharray: 10575px;
+    stroke-dashoffset: 10575px;
+    animation: animSvg 5s ease forwards;
+}
+
+@keyframes animSvg {
+    to {
+        stroke-dashoffset: 0;
     }
+}
+
+.noDraw {
+    margin: 0 auto;
+}
+
+.noDraw path {
+    stroke-width: 10;
+}
+
+.transition {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #35bf73;
+    z-index: 1000;
+}
+
+.upText {
+    overflow: hidden;
+    color: #ffff;
+    display: flex;
+    justify-content: center;
+}
+
+.toUp {
+    font-weight: 800;
+    font-size: 5rem;
+}
+
+
+/*Sujet*/
+
+.height-max {
+    min-height: 80vh;
 }
