--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,76 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="home"></div>
+    <div class="home">
+
+        <div class="transition">
+
+            <div class="logoSVG">
+
+                <svg class='noDraw' version="1.0" xmlns="http://www.w3.org/2000/svg"
+                width="319.000000pt" height="182.000000pt" viewBox="0 0 219.000000 82.000000"
+                preserveAspectRatio="xMidYMid meet">
+
+                    <g transform="translate(0.000000,82.000000) scale(0.100000,-0.100000)"
+                    fill="none" stroke="#ffffff">
+                    <path d="M227 746 c-67 -24 -97 -66 -97 -136 l0 -40 -40 0 -40 0 0 -54 0 -55
+                    38 -3 37 -3 3 -157 3 -158 64 0 64 0 3 158 3 157 68 3 67 3 0 -161 0 -161 68
+                    3 67 3 3 213 2 212 -140 0 c-80 0 -140 4 -140 9 0 5 4 21 10 35 9 24 14 26 70
+                    26 l60 0 0 60 0 60 -67 0 c-38 -1 -85 -7 -106 -14z"/>
+                    <path d="M1111 569 c-150 -29 -213 -237 -108 -356 83 -94 246 -98 331 -7 14
+                    16 26 34 26 40 0 6 -25 18 -56 27 -53 15 -56 15 -75 -4 -19 -19 -71 -25 -104
+                    -13 -8 4 -22 19 -31 35 l-15 29 146 0 c168 0 166 -1 147 88 -25 121 -131 186
+                    -261 161z"/>
+                    <path d="M550 566 c0 -7 142 -392 152 -409 7 -15 20 -17 66 -15 l57 3 39 105
+                    c21 58 55 153 77 213 l38 107 -69 0 -69 0 -39 -122 -39 -123 -38 123 -38 122
+                    -69 0 c-37 0 -68 -2 -68 -4z"/>
+                    <path d="M1410 355 l0 -216 68 3 67 3 5 137 c6 157 10 167 84 175 l45 6 3
+                    -159 3 -159 68 -3 67 -3 0 125 c0 70 5 136 11 149 14 31 48 47 99 47 l40 0 0
+                    56 0 57 -52 -5 c-40 -4 -57 -11 -75 -32 l-23 -27 0 30 0 31 -104 0 c-98 0
+                    -106 -2 -135 -26 l-31 -26 0 26 c0 25 -1 26 -70 26 l-70 0 0 -215z"/>
+                    </g>
+                </svg> 
+
+            </div>
+
+            <div class='text'>
+                <div class="upText welcome">
+                    <div class="toUp">W</div>
+                    <div class="toUp">e</div>
+                    <div class="toUp">l</div>
+                    <div class="toUp">c</div>
+                    <div class="toUp">o</div>
+                    <div class="toUp">m</div>
+                    <div class="toUp">e</div>
+                </div>
+
+                <div class="upText to">
+                    <div class="toUp">t</div>
+                    <div class="toUp">o</div>
+                </div>
+
+                <div class="upText your">
+                    <div class="toUp">y</div>
+                    <div class="toUp">o</div>
+                    <div class="toUp">u</div>
+                    <div class="toUp">r</div>
+                </div>
+
+                <div class="upText welcome">
+                    <div class="toUp">W</div>
+                    <div class="toUp">o</div>
+                    <div class="toUp">r</div>
+                    <div class="toUp">k</div>
+                    <div class="toUp">s</div>
+                    <div class="toUp">p</div>
+                    <div class="toUp">a</div>
+                    <div class="toUp">c</div>
+                    <div class="toUp">e</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 {% endblock %}
 
  
