--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,34 @@
 
 {% block body %}
 
+    <div class="logoSVG">
+
+        <svg class="draw" version="1.0" xmlns="http://www.w3.org/2000/svg"
+        width="319.000000pt" height="182.000000pt" viewBox="0 0 219.000000 82.000000"
+        preserveAspectRatio="xMidYMid meet">
+
+            <g transform="translate(0.000000,82.000000) scale(0.100000,-0.100000)"
+            fill="none" stroke="#ffffff">
+            <path d="M227 746 c-67 -24 -97 -66 -97 -136 l0 -40 -40 0 -40 0 0 -54 0 -55
+            38 -3 37 -3 3 -157 3 -158 64 0 64 0 3 158 3 157 68 3 67 3 0 -161 0 -161 68
+            3 67 3 3 213 2 212 -140 0 c-80 0 -140 4 -140 9 0 5 4 21 10 35 9 24 14 26 70
+            26 l60 0 0 60 0 60 -67 0 c-38 -1 -85 -7 -106 -14z"/>
+            <path d="M1111 569 c-150 -29 -213 -237 -108 -356 83 -94 246 -98 331 -7 14
+            16 26 34 26 40 0 6 -25 18 -56 27 -53 15 -56 15 -75 -4 -19 -19 -71 -25 -104
+            -13 -8 4 -22 19 -31 35 l-15 29 146 0 c168 0 166 -1 147 88 -25 121 -131 186
+            -261 161z"/>
+            <path d="M550 566 c0 -7 142 -392 152 -409 7 -15 20 -17 66 -15 l57 3 39 105
+            c21 58 55 153 77 213 l38 107 -69 0 -69 0 -39 -122 -39 -123 -38 123 -38 122
+            -69 0 c-37 0 -68 -2 -68 -4z"/>
+            <path d="M1410 355 l0 -216 68 3 67 3 5 137 c6 157 10 167 84 175 l45 6 3
+            -159 3 -159 68 -3 67 -3 0 125 c0 70 5 136 11 149 14 31 48 47 99 47 l40 0 0
+            56 0 57 -52 -5 c-40 -4 -57 -11 -75 -32 l-23 -27 0 30 0 31 -104 0 c-98 0
+            -106 -2 -135 -26 l-31 -26 0 26 c0 25 -1 26 -70 26 l-70 0 0 -215z"/>
+            </g>
+        </svg> 
+
+    </div>
+
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -33,18 +61,9 @@
                                    value="{{ csrf_token('authenticate') }}"
                             >
 
-                            {#
-                            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                            See https://symfony.com/doc/current/security/remember_me.html
-
-                            <div class="checkbox mb-3">
-                                <label>
-                                    <input type="checkbox" name="_remember_me"> Remember me
-                                </label>
-                            </div>
-                            #}
+                            
                             <div class="mt-5 text-right md:space-x-3 md:block flex flex-col-reverse">
-                                <button class="md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500"" type="submit">
+                                <button class="md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500" type="submit">
                                 Sign in
                                 </button>
                             </div>
@@ -54,4 +73,17 @@
         </div>
     </form>
 
+    <div class="upText">
+            <div class="toUp">C</div>
+            <div class="toUp">o</div>
+            <div class="toUp">m</div>
+            <div class="toUp">m</div>
+            <div class="toUp">u</div>
+            <div class="toUp">n</div>
+            <div class="toUp">i</div>
+            <div class="toUp">t</div>
+            <div class="toUp">y</div>
+    </div>
+  
 {% endblock %}
+ 
