--- a/templates/sujet/index.html.twig
+++ b/templates/sujet/index.html.twig
@@ -8,7 +8,7 @@
         <h1 class="uk-text-center ">Envie de discuter avec les freelancer de la communauté Fiverr?</h1>
     </div>
 
-    <div class="overflow-x-hidden bg-green-50">
+    <div class="overflow-x-hidden bg-green-50 height-max">
         <div class="px-6 py-8 ">
             <div class="container flex justify-between mx-auto">
                 <div class="w-full lg:w-8/12">
