--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -19,7 +19,7 @@
 	</g>
 </svg>
 </div>
-<nav class="relative px-4 py-4 flex justify-between items-center bg-white mt-3 sticky top-0">
+<nav class="relative px-4 py-4 flex justify-between items-center bg-white mt-3 sticky top-0 h-12">
 		<ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
 			<li><a class="text-sm text-gray-400 hover:text-gray-500" href="{{ path('sujet_index') }}">Salon</a></li>
 			<li class="text-gray-300">
