--- a/templates/message_chanel/index.html.twig
+++ b/templates/message_chanel/index.html.twig
@@ -57,14 +57,28 @@
       <!-- message -->
       <div class="w-full px-5 flex flex-col justify-between">
         <div class="h-full flex flex-col mt-5">
-
+        {% for message in messages %}
+        {% if app.user.id is same as message.user.id %}
+        <div class="flex justify-end mb-4">
+            <div
+              class="mr-2 py-3 px-4 bg-blue-400 rounded-bl-3xl rounded-tl-3xl rounded-tr-xl text-white"
+            >
+              {{ message.content }}
+            </div>
+          </div>
+        {% else %}
+        <div class="flex justify-start mb-4">
+            <div
+              class="ml-2 py-3 px-4 bg-gray-400 rounded-br-3xl rounded-tr-3xl rounded-tl-xl text-white"
+            >
+              {{ message.content }}
+            </div>
+          </div>
+        {% endif %}
+        {% endfor %}
         </div>
         <div class="py-5">
-          <input
-            class="w-full bg-gray-300 py-5 px-3 rounded-xl"
-            type="text"
-            placeholder="type your message here..."
-          />
+         {{ include('message_chanel/_form.html.twig') }}
         </div>
       </div>
       <!-- end message -->
