--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,6 +29,7 @@
     border-radius: 20%;
 }
 
-.text-title{
-    color:blue;
+.uk-text-muted:hover{
+    font-size: 30px;
+    text-decoration: underline;
 }
