--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -5,43 +5,43 @@
 {% block body %}
 {{ include('nav.html.twig') }}
 <div class="uk-background-default ">
-    <h1 class="uk-flex uk-flex-center uk-align-center"> Hello {{ app.user.firstname }} </h1>
+    <h1 class="text-center 3xl"> Hello {{ app.user.firstname }} </h1>
     
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">Name : </h4> 
-        <div class="uk-flex uk-flex-center uk-align-center">
+    <h4 class="text-center text-3xl text-gray-500">Name : </h4> 
+        <div class="text-center">
             {{ app.user.firstname }}<br>
         </div>
  
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">LastName : </h4> 
-        <div class="uk-flex uk-flex-center uk-align-center ">
+    <h4 class="text-center text-3xl text-gray-500">LastName : </h4> 
+        <div class="text-center ">
             {{ app.user.lastname }}<br>
         </div>
 
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">Email : </h4> 
-        <div class="uk-flex uk-flex-center uk-align-center">
+    <h4 class="text-center text-3xl text-gray-500">Email : </h4> 
+        <div class="text-center">
             {{ app.user.email }}<br>
         </div>
 
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">Description : </h4> 
-        <div class="uk-flex uk-flex-center uk-align-center">
+    <h4 class="text-center text-3xl text-gray-500">Description : </h4> 
+        <div class="text-center">
             {{ app.user.description }}<br>
         </div>
 
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">Techno : </h4> 
-        <div class="uk-flex uk-flex-center uk-align-center">
+    <h4 class="text-center text-3xl text-gray-500">Techno : </h4> 
+        <div class="text-center">
             {{ app.user.techno }}
         </div>
         {% if app.user.techno is null %}
-            <p class="uk-flex uk-flex-center uk-align-center uk-text-lead"> You don't have techno</p>  
+            <p class="text-center"> You don't have techno</p>  
         {% else %}
             {% for techno in technos %}
                 {{ app.user.techno }}
             {% endfor %}
         {% endif %}
 
-    <h4 class="uk-flex uk-flex-center uk-align-center text-title uk-text-lead uk-text-bold uk-text-muted">Avatar : </h4>
+    <h4 class="text-center text-3xl text-gray-500">Avatar : </h4>
         {% if app.user.avatar is null %}
-            <p class="uk-flex uk-flex-center uk-align-center">You don't have avatar</p>
+            <p class="text-center">You don't have avatar</p>
         {% else %}
             <div>
                 <img class="uk-flex uk-flex-center uk-align-center img_test" src="{{ app.user.avatar.url }}" alt="avatar"/>
