--- a/templates/sujet/show.html.twig
+++ b/templates/sujet/show.html.twig
@@ -48,8 +48,8 @@
                             <hr/>
                             {% if app.user.id == message.user.id %}
                                 <div class="flex items-center justify-between mt-4">
-                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}" class="uk-button uk-button-text">modifier</a>
-                                    <a href="{{ path('comment_sujet_delete', {id: message.id}) }}" class="uk-button uk-button-text">supprimer</a>
+                                    <a href="{{ path('comment_sujet_edit', {id: message.id}) }}"><span class="font-light text-gray-700 hover:underline">EDITER</span></a>
+                                    <a href="{{ path('comment_sujet_delete', {id: message.id}) }}"> <span class="font-light text-gray-700 hover:underline">SUPPRIMER</span></a>
                                 </div>
                             {% endif %}
                         </div>
@@ -86,5 +86,4 @@
     {% endfor %}
 
     {{ include('comment_sujet/_form.html.twig') }}
-
 {% endblock %}
