ajout lien + correction ptite erreur

--- a/templates/message_chanel/index.html.twig
+++ b/templates/message_chanel/index.html.twig
@@ -36,7 +36,7 @@
             />
           </div>
           <div class="w-full">
-            <div class="text-lg font-semibold">Discussion</div>
+            <div class="text-lg font-semibold"><a href="{{ path('message_projet', {'id': chanel.projet.id}) }}" class="text-gray-500">Discussion</a></div>
           </div>
         </div>
         <div class="flex flex-row py-4 px-2 items-center border-b-2">
