--- a/templates/message_projet/index.html.twig
+++ b/templates/message_projet/index.html.twig
@@ -36,7 +36,7 @@
             />
           </div>
           <div class="w-full">
-            <div class="text-lg font-semibold"><a href="#" class="text-gray-500">Discussion</a></div>
+            <div class="text-lg font-semibold"><a href="{{ path('message_projet', {'id': projet.id}) }}" class="text-gray-500">Discussion</a></div>
           </div>
         </div>
         <div class="flex flex-row py-4 px-2 items-center border-b-2">
@@ -79,7 +79,7 @@
         {% endfor %}
         </div>
         <div class="py-5">
-         {{ include('message_chanel/_form.html.twig') }}
+         {{ include('message_projet/_form.html.twig') }}
         </div>
       </div>
       <!-- end message -->
