--- a/assets/styles/class.scss
+++ b/assets/styles/class.scss
@@ -56,7 +56,7 @@
     stroke-width: 10;
 }
 
-.transition {
+.transitionPage {
     position: absolute;
     display: flex;
     flex-direction: column;
