--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -63,9 +63,12 @@
 
                             
                             <div class="mt-5 text-right md:space-x-3 md:block flex flex-col-reverse">
+                                
                                 <button class="md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500" type="submit">
-                                Sign in
+                                    Sign in
                                 </button>
+
+                                <a href="{{ path("app_register")}}">Not member ?</a>
                             </div>
                     </div>
                 </div>
