--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="home">
 
-        <div class="transition">
+        <div class="transitionPage">
 
             <div class="logoSVG">
 
