--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -31,6 +31,7 @@
                     </div>
                     <div class="mt-5 text-right md:space-x-3 md:block flex flex-col-reverse">
                         <button class=" md:mb-0 bg-green-400 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-full hover:shadow-lg hover:bg-green-500">{{ button_label|default('Register') }}</button>
+                        <a href="{{ path("app_login")}}">Currently member ?</a>
                     </div>
                 </div>
             </div>
